# prometheus

./: .cursor_task.json  .env.example  .gitignore  AGENTS.md  DEV_TEAM.md  Dockerfile  LICENSE  README.md  README_FIXES.md  SELF_RAG_REPORT.md  TESTING_REPORT.md  aletheia_tree.txt  benchmark_results_self_rag.json  benchmark_self_rag.py  clean_dialogue_test.py  clean_file_creation_test.py  debug_agent_issues.py  debug_config.py  debug_llm_response.py  debug_mcp_direct.py  debug_routing_issue.py  demo_agent_workflow.py  demo_agent_workflow_working.py  demo_correct_team_workflow.py  demo_dev_team.py  demo_investor_presentation.py  demo_manual_agent_coordination.py  demo_real_petrovich_workflow.py  docker-compose.yml  patch_debugging.py  prometheus.py  prometheus_old.py  pyproject.toml  pytest.ini  simple_self_rag_test.py  simple_test.py  suppress_llama.py  suppress_llama_output.py  task_4d49d981.md  test_agent_loading.py  (+30 more)
.github/workflows/: ci.yml  integration.yml
aletheia/: __init__.py  config.py  router.py
aletheia/agent/: __init__.py  context_manager.py  orchestrator.py  planner.py  reflexion.py
aletheia/identity/: __init__.py  identity.json  loader.py
aletheia/llm/: __init__.py  external_llm.py  local_llm.py  router.py  utility_llm.py
aletheia/llm/providers/: __init__.py  anthropic_provider.py  factory.py  manager.py
aletheia/memory/: __init__.py  controller.py  enums.py  hierarchical_store.py  models.py  summariser.py  user_profile_store.py  vector_store.py
aletheia/processing/: __init__.py  detectors.py  extractors.py  filters.py  pipeline.py
aletheia/processing/configs/: complexity_detector.json  duplication_filter.json  entity_extractor.json  factual_validator.json  name_extractor.json  reference_detector.json  response_cleaner.json
core/: __init__.py  base_entity.py  cli.py  config.py
core/context/: __init__.py  context_manager.py  retrieval_optimizer.py
core/entity/: base.py
core/frontends/: __init__.py  api_server.py  telegram_bot.py
core/goals/: __init__.py  goal_manager.py
core/llm/: __init__.py  confidence_calibrator.py  fast_llm.py  local_llm.py  router.py
core/llm/providers/: __init__.py  anthropic_provider.py  base.py  factory.py  manager.py  openai_provider.py
core/mcp/: __init__.py
core/mcp/client/: __init__.py  direct_mcp_client.py  mcp_client.py
core/mcp/servers/: __init__.py  agent_communication_server.py  agent_communication_server_fast.py  filesystem_server.py  filesystem_server_simple.py  git_server.py  terminal_server.py  web_server.py
core/memory/: __init__.py  controller.py  enums.py  hierarchical_store.py  memory_critic.py  models.py  summariser.py  user_profile_store.py  vector_store.py
core/planning/: default_planner.py
core/processing/: __init__.py  base.py  cleaners.py  config.py  detectors.py  example_usage.py  extractors.py  filters.py  pipeline.py  validators.py
core/processing/configs/: contamination_filter.json  cot_extractor.json  external_routing.json  (+3 more)
core/reflection/: default_reflection.py  self_rag_reflection.py
core/runtime/: __init__.py  lifecycle.py  registry.py
core/service/: api_server.py  singleton.py  telegram_bot.py
core/task_queue/: __init__.py  queue.py
docs/: FINAL_REPORT.md  SUPERVISOR_BOOTSTRAP.md  architecture-refactor.md  architecture.md  configuration.md  memory.md  production-ready.md  service.md  telegram-bots.md  troubleshooting.md
entities/: __init__.py
entities/aletheia/: __init__.py
entities/aletheia_enhanced/: __init__.py
entities/marina/: __init__.py
entities/supervisor/: __init__.py
entities/vasya/: __init__.py
eval/: self_rag_evaluation.py
models/: load_phi4.py
prometheus_env/: pyvenv.cfg
scripts/: README.md  download_models.sh  entity_bot.py  install_linux.sh  install_mac.sh  install_windows.ps1  stress_test.py  update_llama_cpp.sh  update_llama_cpp_origin.sh  use_alternate_model.sh  worker_local.py
storage/calibrator/: routing_decisions.csv
storage/user_profiles/: игорь_profile.json
tests/: test_api.py  test_context_isolation.py  test_memory_controller.py  test_singleton.py  test_singleton_fixed.py  test_singleton_skip.py  test_smoke.py
tools/: taskctl.py
utils/: timestamp_print.py
(+9 files in other folders)
